# Pokemon

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: monitor.yml  pages.yml  update.yml
config/: products.yaml  settings.yaml
docs/: app.js  index.html  style.css
docs/data/: catalog.json  state.json
src/tcg_monitor/: __init__.py  __main__.py  config.py  dedupe.py  filters.py  health.py  http_client.py  models.py  orchestrator.py  store.py
src/tcg_monitor/notify/: __init__.py  base.py  discord.py  email.py  telegram.py
src/tcg_monitor/providers/: __init__.py  amazon.py  base.py  bestbuy.py  pokemoncenter.py  target.py  walmart.py
src/tcg_monitor/radar/: __init__.py  base.py  bestbuy_radar.py  pokemon_official.py
tests/: test_bestbuy.py  test_bestbuy_radar.py  test_dedupe.py  test_discord.py  test_filters.py  test_phase6.py  test_radar.py  test_target.py
tests/fixtures/: bestbuy_in_stock.json  bestbuy_radar.json  bestbuy_sold_out.json  pokemon_release_page.html  target_in_stock.json  target_out_of_stock.json
