[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcg-monitor"
version = "0.1.0"
description = "Monitor de lanzamientos Pokémon TCG: stock + MSRP, con notificaciones y dashboard."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Solo necesario para providers que exigen un navegador headless (best-effort).
headless = ["playwright>=1.44"]
dev = ["pytest>=8.0"]

[project.scripts]
tcg-monitor = "tcg_monitor.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
